Also update existing <argLine> (necessary for Compress)